# webgpu-testing

./: .gitignore  Agents.md  CODE_REVIEW.md  Cargo.toml  build_web.sh  changes.txt  runchess.sh
examples/: animation.rs  animation_material.rs  bloom.rs  chess.rs  egui_demo.rs  game_of_life.rs  grid.rs  hierarchy.rs  minimal.rs  morph.rs  pbr.rs  roughness_ramp.rs  shadow.rs  simple.rs  sponza.rs  starfield.rs  starfield_gpu.rs  z_buffer.rs
examples/chess/: main.rs
examples/demo/: demo_scenes.rs  main.rs
examples/shaders/: game_of_life.wgsl
examples/sponza/: demo_scenes.rs  main.rs
src/: app.rs  demo_scenes.rs  environment.rs  gpu_particles.rs  io.rs  lib.rs  main.rs  render_application.rs  settings.rs  shader.wgsl  time.rs
src/asset/: cache.rs  handle.rs  mesh.rs  mod.rs
src/renderer/: batch.rs  batches.rs  blit.wgsl  camera.rs  depth.rs  draw.rs  gpu.rs  lights.rs  loader.rs  material.rs  mod.rs  objects.rs  pipeline_builder.rs  primitives.rs  render_context.rs  renderer.rs  renderer_core.rs  texture.rs  uniforms.rs  vertex.rs
src/renderer/assets/: cache.rs  handle.rs  mesh.rs  mod.rs
src/renderer/internal/: batches.rs  buffers.rs  context.rs  environment.rs  mod.rs  pipeline.rs  shadows.rs  vertex.rs
src/renderer/postprocess/: mod.rs
src/scene/: animation.rs  builder.rs  camera.rs  components.rs  loader.rs  mod.rs  scene.rs  scene_core.rs  transform.rs
src/scene/internal/: animations.rs  composition.rs  debug.rs  lights.rs  mod.rs  rendering.rs  transforms.rs
src/shader/: bindings_bindless.wgsl  bindings_traditional.wgsl  common.wgsl  constants.wgsl  depth_prepass.wgsl  depth_resolve.wgsl  environment_background.wgsl  gpu_particle_render.wgsl  gpu_particles.wgsl  pbr_lighting.wgsl  postprocess.wgsl  postprocess_msaa.wgsl  shadow.wgsl
src/ui/: egui_integration.rs  log_viewer.rs  mod.rs  postprocess_window.rs  stats_window.rs
tests/: shadow_pipeline.rs  ssao_math.rs
web/: index.html
web/assets/blender/: physics_boxes.gltf  physics_boxes2.gltf
web/pkg/: wgpu-cube.d.ts  wgpu-cube.js  wgpu-cube_bg.wasm  wgpu-cube_bg.wasm.d.ts
