[package]
name = "wgpu-cube"
version = "0.1.0"
edition = "2021"

[lib]
name = "wgpu_cube"
crate-type = ["cdylib", "rlib"]

[dependencies]
winit = "0.30"
pollster = "0.3"
wgpu = "27.0"
glam = "0.28"
bytemuck = { version = "1.23", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
bitflags = "2.4"
image = "0.25"
hecs = "0.10"
gltf = "1.4"
instant = { version = "0.1", features = ["wasm-bindgen"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "HtmlCanvasElement",
    "Element",
    "HtmlElement",
    "Node",
    "CssStyleDeclaration",
] }
