[package]
name = "wgpu-cube"
version = "0.1.0"
edition = "2021"

[lib]
name = "wgpu_cube"
crate-type = ["cdylib", "rlib"]

[features]
default = []
wasm = []
egui = ["dep:egui", "dep:egui-wgpu", "dep:egui-winit"]

[dependencies]
winit = "0.30"
pollster = "0.3"
wgpu = "27.0"
glam = "0.28"
bytemuck = { version = "1.23", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
bitflags = "2.4"
image = "0.25"
hecs = "0.10"
gltf = "1.4"
instant = { version = "0.1", features = ["wasm-bindgen"] }
base64 = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.8"
rand = { version = "0.8", features = ["small_rng"] }
half = "2.4"

# Egui dependencies (optional)
# Use the release-0.33.0 branch for egui
[dependencies.egui]
git = "https://github.com/emilk/egui.git"
branch = "release-0.33.0"
optional = true
features = [] # add any features you need

[dependencies.egui-wgpu]
git = "https://github.com/emilk/egui.git"
branch = "release-0.33.0"
optional = true

[dependencies.egui-winit]
git = "https://github.com/emilk/egui.git"
branch = "release-0.33.0"
optional = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
console_log = "1.0"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "HtmlCanvasElement",
    "Element",
    "HtmlElement",
    "Node",
    "CssStyleDeclaration",
    "XmlHttpRequest",
    "XmlHttpRequestResponseType",
] }
